# halo2-wasm-sandbox

./: .gitmodules  README.md
halo2-wasm-circuits/: Cargo.toml  index.js
halo2-wasm-circuits/.cargo/: config
halo2-wasm-circuits/src/: fibonacci.rs  lib.rs  wasm.rs
