[package]
name = "halo2-wasm-circuits"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
halo2_proofs = "0.2.0"
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"]} # should push down to wasm target, but having vscode issues
js-sys = "0.3" # should push down to wasm target, but having vscode issues
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"

# NOTE: necessary because https://docs.rs/getrandom/latest/getrandom/#webassembly-support
[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"]}
rayon = "1.5"
wasm-bindgen-rayon = { version = "1.0"}
wasm-bindgen-futures = "0.4"
